about - prevent sinlge letter to be last in line

--- a/index.html
+++ b/index.html
@@ -90,13 +90,17 @@
                          <img src="images/IW.jpg" class="img-responsive" alt="">
                     </div>
                     <div class="col-md-6 col-sm-6">
-                         <p>Jestem psychologiem i psychoterapeutą. Zajmuję się pomocą psychologiczną oraz psychoterapią osób dorosłych. W kontakcie z pacjentem najważniejsze jest dla mnie zbudowanie relacji opartej na poczuciu akceptacji, zrozumienia i bezpieczeństwa, gdyż wierzę, że relacja taka ma wielką wartość terapeutyczną. Stanowi również niezbędną i&nbspsolidną podstawę do współpracy
-                              opartej na zaufaniu i zaangażowaniu.</p>
-                         <p>Pracuję w modalności psychodynamicznej. Celem mojej pracy jest doprowadzenie do trwałych zmian w sposobie przeżywania i funkcjonowania pacjenta w różnych obszarach życia, z którymi ma trudność. To pacjent przynosi siebie, swoje potrzeby, konflikty, problemy i wspólnie ustalamy co jest źródłem trudności i w jakim kierunku
-                              będziemy zmierzać. Duże znaczenie ma dla mnie etyka, dlatego w swojej pracy kieruję się Kodeksem Zasad Etycznych Psychoterapeuty. Dbając o jakość moich usług poddaję się regularnej superwizji.</p>
-                         <p>Ukończyłam studia psychologiczne na Uniwersytecie Śląskim w Katowicach ze specjalnością w Psychologii Klinicznej oraz Psychologii Zdrowia i Jakości Życia. Obecnie kształcę się w Katedrze Psychoterapii Collegium Medicum na Uniwersytecie Jagiellońskim w Krakowie. Szkolenie to jest atestowane przez Polskie Towarzystwo Psychiatryczne.</p>
-                         <p>Doświadczenie zawodowe zdobywałam między innymi w Sosnowieckim Szpitalu Miejskim w Oddziale Psychiatrycznym dla Chorych Somatycznie oraz w Centrum Zdrowia Psychicznego Feniks w Katowicach zarówno w Poradni Zdrowia Psychicznego, jak i na Dziennych Oddziałach Psychiatrycznych dla dorosłych i dla dzieci.</p>
-                         <p>Aktualnie pracuję w Centrum Zdrowia Psychicznego Feniks w Katowicach w Poradni Zdrowia Psychicznego, w Dziennym Oddziale Psychiatrycznym oraz w Dziennym Oddziale Leczenia Nerwic.</p>
+                         <p>Jestem psychologiem i psychoterapeutą. Zajmuję się pomocą psychologiczną oraz psychoterapią osób dorosłych.
+                              W kontakcie z&nbsppacjentem najważniejsze jest dla mnie zbudowanie relacji opartej na poczuciu akceptacji, zrozumienia i&nbspbezpieczeństwa, gdyż wierzę, że relacja taka ma wielką wartość terapeutyczną.
+                              Stanowi również niezbędną i&nbspsolidną podstawę do współpracy opartej na zaufaniu i&nbspzaangażowaniu.</p>
+                         <p>Pracuję w modalności psychodynamicznej. Celem mojej pracy jest doprowadzenie do trwałych zmian w sposobie przeżywania i&nbspfunkcjonowania pacjenta w&nbspróżnych obszarach życia, z&nbspktórymi ma trudność.
+                              To pacjent przynosi siebie, swoje potrzeby, konflikty, problemy i&nbspwspólnie ustalamy co jest źródłem trudności i&nbspw jakim kierunku będziemy zmierzać.
+                              Duże znaczenie ma dla mnie etyka, dlatego w&nbspswojej pracy kieruję się Kodeksem Zasad Etycznych Psychoterapeuty. Dbając o&nbspjakość moich usług poddaję się regularnej superwizji.</p>
+                         <p>Ukończyłam studia psychologiczne na Uniwersytecie Śląskim w&nbspKatowicach ze specjalnością w&nbspPsychologii Klinicznej oraz Psychologii Zdrowia i Jakości Życia.
+                              Obecnie kształcę się w&nbspKatedrze Psychoterapii Collegium Medicum na Uniwersytecie Jagiellońskim w&nbspKrakowie. Szkolenie to jest atestowane przez Polskie Towarzystwo Psychiatryczne.</p>
+                         <p>Doświadczenie zawodowe zdobywałam między innymi w&nbspSosnowieckim Szpitalu Miejskim w&nbspOddziale Psychiatrycznym dla Chorych Somatycznie oraz w&nbspCentrum Zdrowia Psychicznego Feniks w&nbspKatowicach
+                              zarówno w&nbspPoradni Zdrowia Psychicznego, jak i&nbspna Dziennych Oddziałach Psychiatrycznych dla dorosłych i&nbspdla dzieci.</p>
+                         <p>Aktualnie pracuję w&nbspCentrum Zdrowia Psychicznego Feniks w&nbspKatowicach w&nbspPoradni Zdrowia Psychicznego, w&nbspDziennym Oddziale Psychiatrycznym oraz w&nbspDziennym Oddziale Leczenia Nerwic.</p>
 
                          <!--<div style="text-align: center">
                               <button id="show-more-about" class="btn" onclick="$('#about-more').fadeIn();$('#hide-more-about').show();$('#show-more-about').hide();"><i class="fa fa-angle-double-down"></i> DOWIEDZ SIĘ WIĘCEJ</button>
