prevent sinlge letter to be last in line; added maps links

--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
                               </a>
                               <div class="news-info">
                                    <h3><a href="news-detail.html">Konsultacje psychologiczne</a></h3>
-                                   <p>Obejmują zazwyczaj 2 – 4 pierwszych spotkań. Mają na celu ustalenie rodzaju problemu, z którym zgłasza się pacjent, jego potrzeb i oczekiwań oraz dobór najlepszej formy pomocy i jej omówienie.</p>
+                                   <p>Obejmują zazwyczaj 2–4&nbsppierwszych spotkań.
+                                        Mają na celu ustalenie rodzaju problemu, z&nbspktórym zgłasza się pacjent, jego potrzeb i&nbspoczekiwań oraz dobór najlepszej formy pomocy i&nbspjej omówienie.</p>
                               </div>
                          </div>
                     </div>
@@ -145,7 +146,8 @@
                               </a>
                               <div class="news-info">
                                    <h3><a href="news-detail.html">Poradnictwo, pomoc psychologiczna</a></h3>
-                                   <p>Skierowane do osób, które okresowo borykają się z ciężką sytuacją życiową, stoją przed trudnymi wyborami lub zmagają z wyzwaniami, wydającymi się ponad siły. Spotkania te są ukierunkowane na udzielenie wsparcia i pomoc w znalezieniu najlepszego rozwiązania problemu.</p>
+                                   <p>Skierowane do osób, które okresowo borykają się z ciężką sytuacją życiową, stoją przed trudnymi wyborami lub zmagają z wyzwaniami, wydającymi się ponad siły.
+                                        Spotkania te są ukierunkowane na udzielenie wsparcia i&nbsppomoc w znalezieniu najlepszego rozwiązania problemu.</p>
                               </div>
                          </div>
                     </div>
@@ -157,7 +159,9 @@
                               </a>
                               <div class="news-info">
                                    <h3><a href="news-detail.html">Psychoterapia indywidualna</a></h3>
-                                   <p>Jest formą leczenia. Przeznaczona jest dla osób, których trudności mają bardziej utrwalony charakter i rzutują na codzienne funkcjonowanie, często w różnych obszarach życia (np. utrudniają budowanie relacji międzyludzkich). Jest to cykl regularnych spotkań odbywających się 1-2 razy w tygodniu. Długość trwania psychoterapii jest uzależniona od indywidualnych potrzeb i charakteru problemu, z którym zgłasza się pacjent.</p>
+                                   <p>Jest formą leczenia. Przeznaczona jest dla osób, których trudności mają bardziej utrwalony charakter i&nbsprzutują na codzienne funkcjonowanie, często w&nbspróżnych obszarach życia (np. utrudniają budowanie relacji międzyludzkich).
+                                        Jest to cykl regularnych spotkań odbywających się 1-2&nbsprazy w&nbsptygodniu.
+                                        Długość trwania psychoterapii jest uzależniona od indywidualnych potrzeb i&nbspcharakteru problemu, z którym zgłasza się pacjent.</p>
                               </div>
                          </div>
                     </div>
@@ -176,34 +180,30 @@
                               <h2 style="text-align: center">CENNIK</h2>
                          </div>
                     </div>
-
                     <div class="col-md-4 col-sm-6">
                          <div class="news-thumb">
                               <div class="price-info">
                                    <h3><a href="news-detail.html">Konsultacje psychologiczne</a></h3>
-                                   <p>100 zł / 60 min</p>
+                                   <p>100-150 zł / 60 min</p>
                               </div>
                          </div>
                     </div>
-
                     <div class="col-md-4 col-sm-6">
                          <div class="news-thumb">
                               <div class="price-info">
                                    <h3><a href="news-detail.html">Poradnictwo, pomoc psychologiczna</a></h3>
-                                   <p>100 zł / 60 min</p>
+                                   <p>100-150 zł / 60 min</p>
                               </div>
                          </div>
                     </div>
-
                     <div class="col-md-4 col-sm-6">
                          <div class="news-thumb">
                               <div class="price-info">
                                    <h3><a href="news-detail.html">Psychoterapia indywidualna</a></h3>
-                                   <p>100 zł / 60 min</p>
+                                   <p>100-150 zł / 60 min</p>
                               </div>
                          </div>
                     </div>
-
                </div>
           </div>
      </section>
@@ -226,8 +226,8 @@
                               </div>
                          </div>
                          <div class="col-md-12 col-sm-12" style="text-align: justify; margin-top: 20px">
-                              <p>Zapraszam do kontaktu telefonicznego lub mailowego. W sytuacji, gdy nie odbieram telefonu - oddzwonię.</p>
-                              <p>Zachęcam również do wysłania sms-a z zapytaniem o możliwy termin spotkania<!-- lub skorzystanie z formularza kontaktowego poniżej-->.</p>
+                              <p>Zapraszam do kontaktu telefonicznego lub mailowego. W&nbspsytuacji, gdy nie odbieram telefonu - oddzwonię.</p>
+                              <p>Zachęcam również do wysłania sms-a z zapytaniem o&nbspmożliwy termin spotkania<!-- lub skorzystanie z formularza kontaktowego poniżej-->.</p>
                          </div>
                     </div>
                     <div class="clearfix"></div>
@@ -277,7 +277,9 @@
                                    <p>Katowice, ul. Witosa 21</p>
                               </div>
                               <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3033.3997428625385!2d18.968874204581443!3d50.258787015653304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4716cdd871035a01%3A0x8ceebf977ab4a43f!2sCentrum+Zdrowia+Psychicznego+%22Feniks%22!5e0!3m2!1spl!2spl!4v1523817936135" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>-->
-                              <img class="places-map" src="images/Map_Feniks.png" style="max-width: 100%;"/>
+                              <a target="_blank" href="https://www.google.pl/maps/place/Centrum+Zdrowia+Psychicznego+%22Feniks%22/@50.2594817,18.9707387,15z/data=!4m12!1m6!3m5!1s0x0:0x8ceebf977ab4a43f!2sCentrum+Zdrowia+Psychicznego+%22Feniks%22!8m2!3d50.2594817!4d18.9707387!3m4!1s0x0:0x8ceebf977ab4a43f!8m2!3d50.2594817!4d18.9707387">
+                                   <img class="places-map" src="images/Map_Feniks.png"/>
+                              </a>
                          </div>
                     </div>
                     <div class="col-md-6 col-sm-6">
@@ -286,13 +288,14 @@
                                    <h4>Centrum Psychologiczne PozaCzasem</h4>
                                    <p>Katowice, ul. św Jana 11</p>
                               </div>
-                              <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3033.3997428625385!2d18.968874204581443!3d50.258787015653304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4716cdd871035a01%3A0x8ceebf977ab4a43f!2sCentrum+Zdrowia+Psychicznego+%22Feniks%22!5e0!3m2!1spl!2spl!4v1523817936135" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>-->
-                              <img class="places-map" src="images/Map_PozaCzasem.png"/>
+                              <a target="_blank" href="https://www.google.pl/maps/place/Gabinet+Psychologiczny+Agnieszka+Pietrzyk/@50.2577364,19.021176,19.29z/data=!4m8!1m2!2m1!1sgabinet+psychologiczny!3m4!1s0x0:0x156dc6cd10321002!8m2!3d50.258094!4d19.021361">
+                                   <img class="places-map" src="images/Map_PozaCzasem.png"/>
+                              </a>
                               <div class="arrival-description">
                               <p>
-                                   Gabinet znajduje się w śródmieściu 10 metrów od przystanku tramwajowego Katowice Św. Jana skąd odjeżdżają tramwaje o numerach 6, 14, 16, 19, 23, 36.
+                                   Gabinet znajduje się w śródmieściu 10 metrów od przystanku tramwajowego Katowice Św. Jana skąd odjeżdżają tramwaje o&nbspnumerach 6, 14, 16, 19, 23, 36.
                                    <br>Lokalizacja pozwala również w bezproblemowy sposób dostać się autobusem lub własnym samochodem.
-                                   W przypadku własnego pojazdu zalecam skorzystać z parkingu znajdującego się w Galerii Katowickiej gdzie każdy znajdzie miejsce a przez 2 godziny parking jest darmowy.
+                                   W przypadku własnego pojazdu zalecam skorzystać z parkingu znajdującego się w Galerii Katowickiej gdzie każdy znajdzie miejsce, a przez 2 godziny parking jest darmowy.
                                    Gabinet znajduje się w odległości 400 m od Galerii kierując się w stronę Katowickiego Rynku.
                               </p>
                               </div>
