meta contents; removed links

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
      <title>Psychoterapia - Izabela Witkowicz</title>
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-     <meta name="description" content="">
-     <meta name="keywords" content="">
+     <meta name="description" content="Profesjonalna psychoterapia i pomoc psychologa w centrum Katowic. Leczenie nerwicy, depresji oraz pomoc w sytuacjach silnego stresu, kryzysach emocjonalnych i poczuciu osamotnienia.">
+     <meta name="keywords" content="gabinet psychologiczny, psycholog Katowice, psycholog Sosnowiec, psychologowie Katowice, psychologowie Sosnowiec, psychoterapia Katowice, psychoterapia Sosnowiec, psychiatra Katowice, psychiatra Sosnowiec, leczenie nerwic Katowice, leczenie nerwic Katowice, wypalenie zawodowe,lęk, depresja, lek na nerwice, psychoterapia, psychoanaliza, psychoterapia krótkoterminowa.">
      <meta name="author" content="Paweł Witkowicz">
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+     <base href="http://www.psychoterapia-slaskie.pl" />
 
      <link rel="stylesheet" href="css/bootstrap.min.css">
      <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -56,7 +58,7 @@
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <a href="index.html" class="navbar-brand" style="padding-top: 1rem;">
+                    <a href="/" class="navbar-brand" style="padding-top: 1rem;">
                          <img src="./images/Logo_IW.png" style="max-height: 40px; max-width: 100%"/>
                     </a>
                </div>
@@ -183,7 +185,7 @@
                     <div class="col-md-4 col-sm-6">
                          <div class="news-thumb">
                               <div class="price-info">
-                                   <h3><a href="news-detail.html">Konsultacje psychologiczne</a></h3>
+                                   <h3><a href="#">Konsultacje psychologiczne</a></h3>
                                    <p>100-150 zł / 60 min</p>
                               </div>
                          </div>
@@ -191,7 +193,7 @@
                     <div class="col-md-4 col-sm-6">
                          <div class="news-thumb">
                               <div class="price-info">
-                                   <h3><a href="news-detail.html">Poradnictwo, pomoc psychologiczna</a></h3>
+                                   <h3><a href="#">Poradnictwo, pomoc psychologiczna</a></h3>
                                    <p>100-150 zł / 60 min</p>
                               </div>
                          </div>
@@ -199,7 +201,7 @@
                     <div class="col-md-4 col-sm-6">
                          <div class="news-thumb">
                               <div class="price-info">
-                                   <h3><a href="news-detail.html">Psychoterapia indywidualna</a></h3>
+                                   <h3><a href="#">Psychoterapia indywidualna</a></h3>
                                    <p>100-150 zł / 60 min</p>
                               </div>
                          </div>
