--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <meta name="author" content="Paweł Witkowicz">
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-     <base href="http://www.psychoterapia-slaskie.pl" />
+     <base href="https://www.psychoterapia-slaskie.pl" />
 
      <link rel="stylesheet" href="css/bootstrap.min.css">
      <link rel="stylesheet" href="css/font-awesome.min.css">
