--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                    <img src="images/offer_image_1_800x533.jpg" class="img-responsive offer-image" alt="">
                               </a>
                               <div class="news-info">
-                                   <h3><a href="news-detail.html">Konsultacje psychologiczne</a></h3>
+                                   <h3><a href="#">Konsultacje psychologiczne</a></h3>
                                    <p>Obejmują zazwyczaj 2–4&nbsppierwszych spotkań.
                                         Mają na celu ustalenie rodzaju problemu, z&nbspktórym zgłasza się pacjent, jego potrzeb i&nbspoczekiwań oraz dobór najlepszej formy pomocy i&nbspjej omówienie.</p>
                               </div>
@@ -147,7 +147,7 @@
                                    <img src="images/offer_image_2_800x533.jpg" class="img-responsive offer-image" alt="">
                               </a>
                               <div class="news-info">
-                                   <h3><a href="news-detail.html">Poradnictwo, pomoc psychologiczna</a></h3>
+                                   <h3><a href="#">Poradnictwo, pomoc psychologiczna</a></h3>
                                    <p>Skierowane do osób, które okresowo borykają się z ciężką sytuacją życiową, stoją przed trudnymi wyborami lub zmagają z wyzwaniami, wydającymi się ponad siły.
                                         Spotkania te są ukierunkowane na udzielenie wsparcia i&nbsppomoc w znalezieniu najlepszego rozwiązania problemu.</p>
                               </div>
@@ -160,7 +160,7 @@
                                    <img src="images/offer_image_3_800x533.jpg" class="img-responsive offer-image" alt="">
                               </a>
                               <div class="news-info">
-                                   <h3><a href="news-detail.html">Psychoterapia indywidualna</a></h3>
+                                   <h3><a href="#">Psychoterapia indywidualna</a></h3>
                                    <p>Jest formą leczenia. Przeznaczona jest dla osób, których trudności mają bardziej utrwalony charakter i&nbsprzutują na codzienne funkcjonowanie, często w&nbspróżnych obszarach życia (np. utrudniają budowanie relacji międzyludzkich).
                                         Jest to cykl regularnych spotkań odbywających się 1-2&nbsprazy w&nbsptygodniu.
                                         Długość trwania psychoterapii jest uzależniona od indywidualnych potrzeb i&nbspcharakteru problemu, z którym zgłasza się pacjent.</p>
@@ -186,7 +186,7 @@
                          <div class="news-thumb">
                               <div class="price-info">
                                    <h3><a href="#">Konsultacje psychologiczne</a></h3>
-                                   <p>100-150 zł / 60 min</p>
+                                   <p>100-130 zł / 60 min</p>
                               </div>
                          </div>
                     </div>
@@ -194,7 +194,7 @@
                          <div class="news-thumb">
                               <div class="price-info">
                                    <h3><a href="#">Poradnictwo, pomoc psychologiczna</a></h3>
-                                   <p>100-150 zł / 60 min</p>
+                                   <p>100-130 zł / 60 min</p>
                               </div>
                          </div>
                     </div>
@@ -202,7 +202,7 @@
                          <div class="news-thumb">
                               <div class="price-info">
                                    <h3><a href="#">Psychoterapia indywidualna</a></h3>
-                                   <p>100-150 zł / 60 min</p>
+                                   <p>100-130 zł / 60 min</p>
                               </div>
                          </div>
                     </div>
@@ -297,7 +297,7 @@
                               <p>
                                    Gabinet znajduje się w śródmieściu 10 metrów od przystanku tramwajowego Katowice Św. Jana skąd odjeżdżają tramwaje o&nbspnumerach 6, 14, 16, 19, 23, 36.
                                    <br>Lokalizacja pozwala również w bezproblemowy sposób dostać się autobusem lub własnym samochodem.
-                                   W przypadku własnego pojazdu zalecam skorzystać z parkingu znajdującego się w Galerii Katowickiej gdzie każdy znajdzie miejsce, a przez 2 godziny parking jest darmowy.
+                                   W&nbspprzypadku własnego pojazdu zalecam skorzystać z parkingu znajdującego się w Galerii Katowickiej gdzie każdy znajdzie miejsce, a przez 2 godziny parking jest darmowy.
                                    Gabinet znajduje się w odległości 400 m od Galerii kierując się w stronę Katowickiego Rynku.
                               </p>
                               </div>
