design info deleted

--- a/index.html
+++ b/index.html
@@ -322,8 +322,7 @@
                               <p>E-mail: <a href="mailto:psychoterapia.witkowicz@gmail.com">psychoterapia.witkowicz@gmail.com</a></p>
                          </div>
                          <div class="col-md-3 col-sm-3">
-                              <p>Copyright &copy; 2018 PW</p>
-                              <p>Design: PW</p>
+                              <p>Copyright &copy; 2018 Izabela Witkowicz</p>
                          </div>
                          <div class="col-md-1 col-sm-1 text-align-center">
                               <div class="angle-up-btn">
