update link to Poza Czasem

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                                    <h4>Centrum Psychologiczne PozaCzasem</h4>
                                    <p>Katowice, ul. św Jana 11</p>
                               </div>
-                              <a target="_blank" href="https://www.google.pl/maps/place/Gabinet+Psychologiczny+Agnieszka+Pietrzyk/@50.2577364,19.021176,19.29z/data=!4m8!1m2!2m1!1sgabinet+psychologiczny!3m4!1s0x0:0x156dc6cd10321002!8m2!3d50.258094!4d19.021361">
+                              <a target="_blank" href="https://www.google.com/maps/place/Centrum+Psychologiczne+Pozaczasem/@50.2580939,19.0191722,17z/data=!3m1!4b1!4m5!3m4!1s0x4716ce4818d17005:0x49f340d7ac02e511!8m2!3d50.2580939!4d19.0213609">
                                    <img class="places-map" src="images/Map_PozaCzasem.png"/>
                               </a>
                               <div class="arrival-description">
