added alt tags to images

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                          <h2>PSYCHOTERAPEUTA, PSYCHOLOG</h2>
                     </div>
                     <div class="col-md-6 col-sm-6" style="margin-bottom: 20px;">
-                         <img src="images/IW.jpg" class="img-responsive" alt="">
+                         <img src="images/IW.jpg" class="img-responsive" alt="Izabela Witkowicz - psychoterapeuta, psycholog">
                     </div>
                     <div class="col-md-6 col-sm-6">
                          <p>Jestem psychologiem i psychoterapeutą. Zajmuję się pomocą psychologiczną oraz psychoterapią osób dorosłych.
@@ -132,7 +132,7 @@
                     <div class="col-md-4 col-sm-6">
                          <div class="news-thumb">
                               <a href="#">
-                                   <img src="images/offer_image_1_800x533.jpg" class="img-responsive offer-image" alt="">
+                                   <img src="images/offer_image_1_800x533.jpg" class="img-responsive offer-image" alt="Konsultacje psychologiczne">
                               </a>
                               <div class="news-info">
                                    <h3><a href="#">Konsultacje psychologiczne</a></h3>
@@ -144,7 +144,7 @@
                     <div class="col-md-4 col-sm-6">
                          <div class="news-thumb">
                               <a href="#">
-                                   <img src="images/offer_image_2_800x533.jpg" class="img-responsive offer-image" alt="">
+                                   <img src="images/offer_image_2_800x533.jpg" class="img-responsive offer-image" alt="Poradnictwo, pomoc psychologiczna">
                               </a>
                               <div class="news-info">
                                    <h3><a href="#">Poradnictwo, pomoc psychologiczna</a></h3>
@@ -157,7 +157,7 @@
                     <div class="col-md-4 col-sm-6">
                          <div class="news-thumb">
                               <a href="#">
-                                   <img src="images/offer_image_3_800x533.jpg" class="img-responsive offer-image" alt="">
+                                   <img src="images/offer_image_3_800x533.jpg" class="img-responsive offer-image" alt="Psychoterapia indywidualna">
                               </a>
                               <div class="news-info">
                                    <h3><a href="#">Psychoterapia indywidualna</a></h3>
