--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="pl-PL">
 
 <head>
-     <title>Izabela Witkowicz - psychoterapeuta, psycholog - Katowice</title>
+     <title>Izabela Witkowicz, psychoterapeuta, psycholog, Katowice</title>
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
      <meta name="description" content="Profesjonalna psychoterapia i pomoc psychologa w centrum Katowic. Leczenie nerwicy, depresji oraz pomoc w sytuacjach silnego stresu, kryzysach emocjonalnych i poczuciu osamotnienia.">
-     <meta name="keywords" content="gabinet psychologiczny, psycholog Katowice, psycholog Sosnowiec, psychologowie Katowice, psychologowie Sosnowiec, psychoterapia Katowice, psychoterapia Sosnowiec, psychiatra Katowice, psychiatra Sosnowiec, leczenie nerwic Katowice, leczenie nerwic Katowice, wypalenie zawodowe,lęk, depresja, lek na nerwice, psychoterapia, psychoanaliza, psychoterapia krótkoterminowa.">
+     <meta name="keywords" content="psychoterapia Katowice, psycholog Katowice, gabinet psychologiczny, leczenie nerwic Katowice, leczenie nerwic Katowice, wypalenie zawodowe, lęk, depresja">
      <meta name="author" content="Paweł Witkowicz">
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
