--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
      <meta name="description" content="Profesjonalna psychoterapia i pomoc psychologa w centrum Katowic. Leczenie nerwicy, depresji oraz pomoc w sytuacjach silnego stresu, kryzysach emocjonalnych i poczuciu osamotnienia.">
-     <meta name="keywords" content="psychoterapia Katowice, psycholog Katowice, gabinet psychologiczny, leczenie nerwic Katowice, leczenie nerwic Katowice, wypalenie zawodowe, lęk, depresja">
+     <meta name="keywords" content="psychoterapia Katowice, psycholog Katowice, leczenie nerwic Katowice, wypalenie zawodowe, lęk, depresja">
      <meta name="author" content="Paweł Witkowicz">
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
