removed commented iframe google map

--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
      <link rel="stylesheet" href="css/bootstrap.min.css">
      <link rel="stylesheet" href="css/font-awesome.min.css">
 
-     <!-- MAIN CSS -->
      <link rel="stylesheet" href="css/style.css">
      <link rel="icon" href="./images/icon.png">
 </head>
 <body id="top" data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
-     <!-- PRE LOADER -->
      <section class="preloader">
           <div class="spinner">
                <span class="spinner-rotate"></span>
@@ -29,7 +27,6 @@
      </section>
 
 
-     <!-- HEADER -->
      <header>
           <div class="container">
                <div class="row">
@@ -46,7 +43,6 @@
      </header>
 
 
-     <!-- MENU -->
      <section class="navbar navbar-default navbar-static-top" role="navigation">
           <div class="container">
 
@@ -57,13 +53,11 @@
                          <span class="icon icon-bar"></span>
                     </button>
 
-                    <!-- lOGO TEXT HERE -->
                     <a href="/" class="navbar-brand" style="padding-top: 1rem;">
                          <img src="./images/Logo_IW.png" style="max-height: 40px; max-width: 100%"/>
                     </a>
                </div>
 
-               <!-- MENU LINKS -->
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                          <li><a href="#about" class="smoothScroll">Psychoterapeuta</a></li>
@@ -78,7 +72,6 @@
      </section>
 
 
-     <!--O mnie-->
      <section id="about">
           <div class="container">
                <div class="row" style="text-align: justify;">
@@ -211,7 +204,6 @@
      </section>
 
 
-     <!-- Kontakt-->
      <section id="appointment">
           <div class="container">
                <div class="row">
@@ -229,7 +221,7 @@
                          </div>
                          <div class="col-md-12 col-sm-12" style="text-align: justify; margin-top: 20px">
                               <p>Zapraszam do kontaktu telefonicznego lub mailowego. W&nbspsytuacji, gdy nie odbieram telefonu - oddzwonię.</p>
-                              <p>Zachęcam również do wysłania sms-a z zapytaniem o&nbspmożliwy termin spotkania<!-- lub skorzystanie z formularza kontaktowego poniżej-->.</p>
+                              <p>Zachęcam również do wysłania sms-a z zapytaniem o&nbspmożliwy termin spotkania.</p>
                          </div>
                     </div>
                     <div class="clearfix"></div>
@@ -237,7 +229,6 @@
           </div>
      </section>
 
-     <!--Dojazd -->
      <section id="places">
           <div class="row">
                <div class="container">
@@ -250,7 +241,6 @@
                                    <h4>Centrum Zdrowia Psychicznego Feniks</h4>
                                    <p>Katowice, ul. Witosa 21</p>
                               </div>
-                              <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3033.3997428625385!2d18.968874204581443!3d50.258787015653304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4716cdd871035a01%3A0x8ceebf977ab4a43f!2sCentrum+Zdrowia+Psychicznego+%22Feniks%22!5e0!3m2!1spl!2spl!4v1523817936135" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>-->
                               <a target="_blank" href="https://www.google.pl/maps/place/Centrum+Zdrowia+Psychicznego+%22Feniks%22/@50.2594817,18.9707387,15z/data=!4m12!1m6!3m5!1s0x0:0x8ceebf977ab4a43f!2sCentrum+Zdrowia+Psychicznego+%22Feniks%22!8m2!3d50.2594817!4d18.9707387!3m4!1s0x0:0x8ceebf977ab4a43f!8m2!3d50.2594817!4d18.9707387">
                                    <img class="places-map" src="images/Map_Feniks.png"/>
                               </a>
@@ -279,7 +269,6 @@
           </div>
      </section>
 
-     <!-- FOOTER -->
      <footer>
           <div class="container">
                <div class="row">
@@ -306,7 +295,6 @@
           </div>
      </footer>
 
-     <!-- SCRIPTS -->
      <script src="js/jquery.js"></script>
      <script src="js/bootstrap.min.js"></script>
      <script src="js/jquery.sticky.js"></script>
