--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl-PL">
 
 <head>
-     <title>Izabela Witkowicz, psychoterapeuta, psycholog, Katowice</title>
+     <title>Psychoterapeuta, psycholog, Katowice | Izabela Witkowicz</title>
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
      <meta name="description" content="Profesjonalna psychoterapia i pomoc psychologa w centrum Katowic. Leczenie nerwicy, depresji oraz pomoc w sytuacjach silnego stresu, kryzysach emocjonalnych i poczuciu osamotnienia.">
