updated image size; keywords

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
      <meta name="description" content="Profesjonalna psychoterapia i pomoc psychologa w centrum Katowic. Leczenie nerwicy, depresji oraz pomoc w sytuacjach silnego stresu, kryzysach emocjonalnych i poczuciu osamotnienia.">
-     <meta name="keywords" content="psychoterapia Katowice, psycholog Katowice, leczenie nerwic Katowice, wypalenie zawodowe, lęk, depresja">
+     <meta name="keywords" content="psycholog Katowice, psychoterapia Katowice, neerwica, depresja">
      <meta name="author" content="Paweł Witkowicz">
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -81,10 +81,10 @@
                          </h1>
                          <h2>PSYCHOTERAPEUTA, PSYCHOLOG</h2>
                     </div>
-                    <div class="col-md-6 col-sm-6" style="margin-bottom: 20px;">
+                    <div class="col-md-4 col-sm-6" style="margin-bottom: 20px;">
                          <img src="images/IW.jpg" class="img-responsive" alt="Izabela Witkowicz - psychoterapeuta, psycholog">
                     </div>
-                    <div class="col-md-6 col-sm-6">
+                    <div class="col-md-8 col-sm-6">
                          <p>Jestem psychologiem i psychoterapeutą. Zajmuję się pomocą psychologiczną oraz psychoterapią osób dorosłych.
                               W kontakcie z&nbsppacjentem najważniejsze jest dla mnie zbudowanie relacji opartej na poczuciu akceptacji, zrozumienia i&nbspbezpieczeństwa, gdyż wierzę, że relacja taka ma wielką wartość terapeutyczną.
                               Stanowi również niezbędną i&nbspsolidną podstawę do współpracy opartej na zaufaniu i&nbspzaangażowaniu.</p>
