--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </div>
                     <div class="col-md-8 col-sm-7 text-align-right">
                          <span class="phone-icon"><i class="fa fa-phone"></i> +48 795-876-144</span>
-                         <span class="date-icon"><i class="fa fa-calendar-plus-o"></i> 15:30 - 20:00 (Wtorek, Piątek) </span>
+                         <span class="date-icon"><i class="fa fa-calendar-plus-o"></i> Wolne terminy: 15:30 - 20:00 (Wtorek, Piątek) </span>
                          <span class="email-icon"><i class="fa fa-envelope-o"></i> <a href="mailto:psychoterapia.witkowicz@gmail.com">psychoterapia.witkowicz@gmail.com</a></span>
                     </div>
                </div>
