clean up comments and tags

--- a/index.html
+++ b/index.html
@@ -8,13 +8,9 @@
      <meta name="keywords" content="psycholog Katowice, psychoterapia Katowice, neerwica, depresja">
      <meta name="author" content="Paweł Witkowicz">
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
      <base href="https://www.psychoterapia-slaskie.pl" />
-
-
      <link rel="stylesheet" href="css/bootstrap.min.css">
      <link rel="stylesheet" href="css/font-awesome.min.css">
-
      <link rel="stylesheet" href="css/style.css">
      <link rel="icon" href="./images/icon.png">
 </head>
@@ -39,19 +35,16 @@
      </header>
      <section class="navbar navbar-default navbar-static-top" role="navigation">
           <div class="container">
-
                <div class="navbar-header">
                     <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                          <span class="icon icon-bar"></span>
                          <span class="icon icon-bar"></span>
                          <span class="icon icon-bar"></span>
                     </button>
-
                     <a href="/" class="navbar-brand" style="padding-top: 1rem;">
                          <img src="./images/Logo_IW.png" style="max-height: 40px; max-width: 100%"/>
                     </a>
                </div>
-
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                          <li><a href="#about" class="smoothScroll">Psychoterapeuta</a></li>
@@ -61,7 +54,6 @@
                          <li class="appointment-btn"><a href="#appointment">Umów się na wizytę</a></li>
                     </ul>
                </div>
-
           </div>
      </section>
      <section id="about">
@@ -106,12 +98,11 @@
      </section>
 
 
-     <!--Oferta-->
-     <section id="team">
+     <section id="offer">
           <div class="container">
                <div class="row">
                     <div class="col-md-12 col-sm-12">
-                         <h2 class="centered">OFERTA</h2>
+                         <h2 class="text-align-center">OFERTA</h2>
                     </div>
                     <div class="clearfix"></div>
                     <div class="col-md-4 col-sm-6">
@@ -158,8 +149,7 @@
      </section>
 
 
-     <!--Cennik-->
-     <section id="news">
+     <section id="prices">
           <div class="container">
                <div class="row">
                     <div class="col-md-12 col-sm-12">
@@ -225,7 +215,7 @@
           <div class="row">
                <div class="container">
                     <div class="col-md-12 col-sm-12" style="margin-bottom: 20px;">
-                         <h2 class="centered">GDZIE PRZYJMUJĘ</h2>
+                         <h2 class="text-align-center">GDZIE PRZYJMUJĘ</h2>
                     </div>
                     <div class="col-md-6 col-sm-6">
                          <div class="footer-thumb">
