--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <base href="https://www.psychoterapia-slaskie.pl" />
      <link rel="stylesheet" href="css/bootstrap.min.css">
      <link rel="stylesheet" href="css/font-awesome.min.css">
-     <link rel="stylesheet" href="css/style.css">
+     <link rel="stylesheet" href="css/style_1807211219.css">
      <link rel="icon" href="./images/icon.png">
 </head>
 <body id="top" data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
@@ -149,7 +149,7 @@
      </section>
 
 
-     <section id="prices">
+     <section id="prices" class="text-align-center">
           <div class="container">
                <div class="row">
                     <div class="col-md-12 col-sm-12">
