--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                          <li><a href="#about" class="smoothScroll">Psychoterapeuta</a></li>
-                         <li><a href="#team" class="smoothScroll">Oferta</a></li>
-                         <li><a href="#news" class="smoothScroll">Cennik</a></li>
+                         <li><a href="#offer" class="smoothScroll">Oferta</a></li>
+                         <li><a href="#prices" class="smoothScroll">Cennik</a></li>
                          <li><a href="#appointment" class="smoothScroll">Kontakt</a></li>
                          <li class="appointment-btn"><a href="#appointment">Umów się na wizytę</a></li>
                     </ul>
